--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "@craco/craco": "^5.6.3",
     "electron-is-dev": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
