--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
   "dependencies": {
     "@craco/craco": "^5.6.3",
     "electron-is-dev": "^1.1.0",
+    "immutability-helper": "^3.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
     "electron": "7.1.8",
     "electron-builder": "^21.2.0",
+    "eslint": "^6.8.0",
     "node-sass-chokidar": "^1.4.0",
     "wait-on": "^3.3.0",
     "yarn-run-all": "^3.1.1"
